--- a/index.html
+++ b/index.html
@@ -1,5 +1,35 @@
 <html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel = "stylesheet" href="style.css">
+  <link rel = "icon" href="">
+  
+  <div class = "navbar">
+  
+  <a href = "Home"> Home</a>
+  <a href = "Shoes"> Shoes</a>
+  <a href = "Justin"> Justin </a>
+  <a href = "Flights"> Flights</a>
+  <a href = "Food Bev"> Food Bev</a>  
+  <a href = "BTS"> BTS</a>   
+  <a href = "Water Slide"> Water Slide</a>  
+  </div>
 
+</head>
+<body>
+  
+  <h1> Christian Han's website  </h1>
+  
+<center>
+  <img src="https://docs.google.com/drawings/d/e/2PACX-1vQGxFpT0-adQD79KFa4lgWkzvBqStzgBNSqC0euMMXTaqJKlsd510m5GaoIM2HfgIenU-vPrxjfMXdN/pub?w=960&amp;h=720">
+  </center>
+</body>
+</html>
 
 
 
